# coach

./: .gitignore  Pipfile  README.md  TODO.txt  functional_tests.py  pyproject.toml
coach/: Pipfile  settings.py  urls.py
team/: models.py  tests.py  views.py
team/migrations/: 0001_initial.py  0002_team_name.py
team/templates/: home.html
util/: coach.py  evaluate_order.pyx  setup.py  simulate_order.py
