[tool.poetry]
name = "coach"
version = "0.1.0"
description = ""
authors = ["David Grant <davidgrant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.3"
cython = "^0.29.15"
fastrand = "^1.2.2"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
selenium = "^3.141.0"
black = "^19.10b0"
ipython = "^7.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
